--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="./css/styles.css">
   <title>Frontend Mentor | 3-column preview card component</title>
 
 </head>
@@ -23,7 +24,8 @@
         <div class="grid-item sedans">
           <img class="icon" src="./images/icon-sedans.svg" alt="">
           <h1 class="title">Sedans</h1>
-          <p class="desc">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your
+          <p class="desc">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the
+            city or on your
             next road trip.</p>
           <button>Learn More</button>
         </div>
@@ -31,7 +33,8 @@
         <div class="grid-item suvs">
           <img class="icon" src="./images/icon-suvs.svg" alt="">
           <h1 class="title">SUVs</h1>
-          <p class="desc">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and
+          <p class="desc">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family
+            vacation and
             off-road adventures.</p>
           <button>Learn More</button>
         </div>
@@ -39,7 +42,8 @@
         <div class="grid-item luxury">
           <img class="icon" src="./images/icon-luxury.svg" alt="">
           <h1 class="title">Luxury</h1>
-          <p class="desc">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and
+          <p class="desc">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a
+            luxury rental and
             arrive in style.</p>
           <button>Learn More</button>
         </div>
